added gpu hamiltonian

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,10 +3,10 @@ include ../make.inc
 all: $(EXS) 
 
 %:: %.c $(OBJS)
-	$(CC) $(CFlAGS) -o $@ $< $(OBJS) $(LIBS) $(INCS) 
+	$(CUC) $(CUFLAGS) -o $@ $< $(OBJS) $(LIBS) $(INCS) 
 
 %:: %.cu $(OBJS)
-	$(CUC) $(CUFlAGS) -o $@ $< $(OBJS) $(LIBS) $(INCS) 
+	$(CUC) $(CUFLAGS) -o $@ $< $(OBJS) $(LIBS) $(INCS) 
 
 $(OBJS): $(SRCS)
 	make -C $(SRCDIR)
